<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/header_veterinary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_txt_pets_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="23dp"
        android:text="@string/txt_pets_name"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <EditText
        android:id="@+id/activity_main_editText_pets_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/mainColor"
        android:hint="@string/editText_pets_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_txt_pets_name" />

    <TextView
        android:id="@+id/activity_main_txt_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_owner"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_editText_pets_name" />

    <EditText
        android:id="@+id/activity_main_editText_owner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/mainColor"
        android:hint="@string/editText_owner"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_txt_owner" />

    <TextView
        android:id="@+id/activity_main_txt_breed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_dogs_breed"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_editText_owner" />

    <AutoCompleteTextView
        android:id="@+id/activity_main_autoCompleteTextView"
        android:layout_width="223dp"
        android:layout_height="44dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/txtAutoComplete_dogs_breed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_txt_breed" />

    <TextView
        android:id="@+id/activity_main_txt_pets_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_dogs_gender"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_autoCompleteTextView" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_txt_pets_gender">

        <RadioButton
            android:id="@+id/activity_main_radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="440dp" />

        <RadioButton
            android:id="@+id/activity_main_radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="440dp" />

    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>