<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/img_veterinaria"
        android:scaleType="fitXY" />


    <TextView
        android:id="@+id/activity_main_txt_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_topic"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/checkBoxSpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Spa"
        android:textColor="@android:color/black"
        android:checked="false" />

    <CheckBox
        android:id="@+id/checkBoxMedication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Medication"
        android:textColor="@android:color/black"
        android:checked="false" />

    <CheckBox
        android:id="@+id/checkBoxGrooming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Grooming"
        android:textColor="@android:color/black"
        android:checked="false" />

    <CheckBox
        android:id="@+id/checkBoxMedicalConsultation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Medical Consultation"
        android:textColor="@color/black"
        android:checked="false" />

    <TextView
        android:id="@+id/activity_main_txt_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_branch"
        android:textSize="20dp" />

    <Spinner
        android:id="@+id/spinnerCountries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:minHeight="48dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_main_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/mainColor"
            android:text="@string/btn_schedule"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/activity_main_btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/mainColor"
            android:text="@string/btn_previous"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>